# cbilling-iptv

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  INSTALL.md  LICENSE.txt  Makefile  README.md  README.ru.md  SECURITY.md  addon.xml  build_addon.py  changelog.txt  default.py  ordereddict.py  pyproject.toml  service.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.kiro/steering/: api-details.md  api-guidelines.md  build-verification.md  code-quality-standards.md  code-style.md  commit-approval.md  debugging-fixes.md  e2e-testing-quirks.md  git-workflow.md  github-conventions.md  kodi-addon-packaging.md  no-property-based-tests.md  project-context.md  python38-compatibility.md  refactoring-principles.md  system-restrictions.md  testing-workflow.md  venv-usage.md  versioning.md
dev/: README.md  docker-compose.gpu.yml  docker-compose.ref.gpu.yml  docker-compose.ref.yml  docker-compose.yml  logs.sh  reset.sh  setup-host.sh  start-ref.sh  start.sh  stop-ref.sh  stop.sh
docs/: dev-notes.md  e2e-testing.md  technical-debt.md
resources/: settings.xml
resources/language/resource.language.en_gb/: strings.po
resources/language/resource.language.ru_ru/: strings.po
resources/lib/: __init__.py  api_adapter.py  api_client.py  archive.py  auth.py  body.py  channels.py  context.py  cron.py  croniter.py  epg_db.py  favorites.py  kodi_helpers.py  playback.py  router.py  utils.py  vod.py  vod_cache.py  watch_history.py
tests/: conftest.py
tests/e2e/: __init__.py  addon_installer.py  artifacts.py  config.py  conftest.py  docker-compose.yml  exceptions.py  guisettings.xml  kodi_client.py  requirements.txt  test_addon_lifecycle.py  test_channel_list.py  test_favorites.py  test_localization.py  test_navigation.py  test_playback.py  test_settings.py  test_timezone.py  test_vod.py  utils.py
tests/integration/: test_epg_channel_list.py  test_router_dispatch.py  test_sqlite_robustness.py  test_vod_search_pagination.py
tests/unit/: test_addon_installer.py  test_api_adapter.py  test_api_client.py  test_archive.py  test_auth.py  test_channels.py  test_context.py  test_e2e_utils.py  test_epg_db.py  test_favorites_new.py  test_imports.py  test_kodi_client.py  test_kodi_helpers.py  test_logging_style.py  test_playback.py  test_router_new.py  test_urllib3_import.py  test_vod_cache.py  test_vod_info.py  test_vod_metadata.py  test_vod_new.py  test_vod_pagination.py  test_vod_preload.py  test_vod_series.py  test_watch_history.py  test_watch_history_new.py
