# pyproject.toml — Tool configuration for plugin.video.cbilling.iptv
# No [build-system] or [project] section: this is a Kodi addon, not a pip package.

[tool.ruff]
target-version = "py38"
line-length = 120
extend-exclude = [
    "resources/lib/vendor",
    "resources/lib/croniter.py",
    "ordereddict.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
# --- Permanent ignores (Kodi addon specifics, kept intentionally) ---
ignore = [
    "E501",   # line too long — handled by ruff formatter
    "F403",   # star imports — Kodi addons use `from xbmc import *`
    "F405",   # may be undefined from star import — consequence of F403
    "UP031",  # printf-style formatting — codebase uses %, migration to f-strings is separate effort
]

# --- Legacy per-file ignores (technical debt — see docs/technical-debt.md) ---
# These rules are disabled ONLY for existing files that predate the strict lint policy.
# New files MUST comply with all rules. Remove ignores as files are refactored.
[tool.ruff.lint.per-file-ignores]
"resources/lib/vendor/*" = ["ALL"]  # Third-party vendored libraries — never modified
"resources/lib/croniter.py" = ["ALL"]  # Third-party vendored code
"default.py" = ["E402"]  # module-level import not at top (sys.path vendor setup before imports)
"resources/lib/api_client.py" = [
    "E402",   # module-level import not at top (vendor path setup before imports)
]
"resources/lib/utils.py" = [
    "N802",   # function name should be lowercase (getSetting, getString, etc.)
    "N806",   # variable in function should be lowercase (aFormat)
]
"resources/lib/cron.py" = [
    "N802",   # function name should be lowercase (deleteJob, getJobs, etc.)
    "N803",   # argument name should be lowercase (jId, cronJob)
    "N806",   # variable in function should be lowercase (nextRun, cronDiff, etc.)
]
# Test files — Kodi API mocks must match camelCase naming of real Kodi API
"tests/conftest.py" = [
    "N802",   # Kodi API mock methods: getSetting, setArt, addDirectoryItem, etc.
    "N803",   # Kodi API mock arguments: isFolder, totalItems, etc.
    "SIM115", # mock File class uses open() without context manager
]
"tests/unit/test_vod_cache.py" = [
    "N802",   # Kodi API mock methods in local fixtures
]
"tests/unit/test_vod_preload.py" = [
    "N802",   # Kodi API mock methods in local fixtures
]
"tests/unit/test_watch_history.py" = [
    "N802",   # Kodi API mock methods in local fixtures
]
"tests/unit/test_kodi_helpers.py" = [
    "N802",   # Kodi API mock methods: getSetting, getLocalizedString
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "api: tests that call the live Cbilling API (require .env credentials, deselected by default)",
    "e2e: end-to-end tests requiring Docker and running Kodi container",
]
addopts = "-m 'not api and not e2e'"
timeout = 120

[tool.coverage.run]
source = ["resources/lib"]
omit = [
    "resources/lib/vendor/*",
    "resources/lib/croniter.py",
    "resources/lib/cron.py",
    "resources/lib/utils.py",
    "resources/lib/channels.py",
    "resources/lib/playback.py",
    "resources/lib/archive.py",
    "resources/lib/vod.py",
    "resources/lib/api_adapter.py",
    "resources/lib/api_client.py",
    "tests/*",
]

[tool.coverage.report]
# Target: 70% for core testable modules (new SOLID modules + vod_cache + body).
# Large UI modules (channels, playback, archive, vod) and API modules (api_client,
# api_adapter) are omitted because they depend on Kodi runtime or live API.
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
]
